--- a/Front-End/src/app/components/header/header.component.html
+++ b/Front-End/src/app/components/header/header.component.html
@@ -1,6 +1,9 @@
 <header class="header h-16 flex items-center bg-primary">
     <div class="flex justify-between items-center w-[75%] mx-auto">
-        <h1 class="text-lg font-kalam text-white w-1/3">Ungria Pizzas</h1>
+        <div class="text-white font-kalam text-base" (click)="navegar('/')"> 
+            <p>Hungria</p>
+            <p class="-mt-2">Pizzas</p>
+        </div>
         <nav class="flex items-center justify-center gap-3">
             <ng-icon 
                 name="iconoirUser" 
@@ -12,7 +15,7 @@
                 name="tablerPizza" 
                 class="text-white rotate-[140deg]" 
                 size="25"
-                (click)="navegar('/')"
+                (click)="navegar('/pizzas')"
             ></ng-icon>
             <ng-icon 
                 name="featherShoppingCart" 
