--- a/Front-End/src/app/pages/cadastro/cadastro.component.html
+++ b/Front-End/src/app/pages/cadastro/cadastro.component.html
@@ -1,6 +1,8 @@
 <main class="flex flex-col items-center w-full">
     <h1 class="font-semibold font-kalam text-lg mt-5">Cadastro de Pizza</h1>
     <form action="">
-        <input type="text" class="border border-black">
+        <app-input 
+
+        ></app-input>
     </form>
 </main>
